# shogun

./: CMakeLists.txt
.ci/: macos-steps.yml
doc/ipython-notebooks/multiclass/Tree/: DecisionTrees.ipynb
examples/meta/: CMakeLists.txt
examples/meta/src/binary/: classifier_gpbtsvm.sg  classifier_libsvmoneclass.sg
examples/meta/src/clustering/: gaussian_mixture_models.sg
examples/meta/src/gaussian_process/: classifier.sg.in  sparse_regression.sg.in
examples/meta/src/multiclass/: shareboost.sg.in
examples/undocumented/python/: classifier_gmnpsvm.py  classifier_gpbtsvm.py  classifier_libsvmoneclass.py  converter_hasheddoc.py  features_read_svmlight_format.py  features_sparse.py  kernel_inversemultiquadric.py  kernel_poly.py  kernel_sparse_gaussian.py  kernel_sparse_linear.py  kernel_sparse_poly.py
libtooling/: CMakeLists.txt  rename_class_members.cpp
src/interfaces/python/: Visitors_implementation.i  swig_typemaps.i
src/interfaces/swig/: Classifier.i  Classifier_includes.i  Distribution.i  Distribution_includes.i  Features.i  Features_includes.i  GetterVisitorInterface.i  Multiclass.i  Multiclass_includes.i  factory.i  shogun.i
src/shogun/base/: AnyParameter.h  SGObject.cpp  constexpr_map.h
src/shogun/clustering/: GMM.cpp  GMM.h
src/shogun/distributions/: Distribution.h  Gaussian.h  HMM.h  Histogram.h  KernelDensity.h  LinearHMM.h  PositionalPWM.h
src/shogun/features/: SparseFeatures.cpp  SparseFeatures.h
src/shogun/io/serialization/: BitseryVisitor.h  JsonDeserializer.cpp  JsonSerializer.cpp
src/shogun/io/visitors/: ToStringVisitor.cpp  ToStringVisitor.h
src/shogun/lib/: SGSparseMatrix.cpp  SGSparseMatrix.h  SGSparseVector.h  any.h
src/shogun/machine/: KernelMachine.cpp
src/shogun/util/: factory.h
(+4 files in other folders)
